# Aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/aegis/: __main__.py  ai.py  audit.py  auth.py  backup.py  cli.py  engine.py  entitlement.py  exceptions.py  execution.py  fs.py  gateway.py  models.py  network.py  payment.py  policy.py  rbac.py  redact.py  registry.py  settings.py  signal_handling.py
src/aegis/api/: app.py  dependencies.py  exceptions.py  middleware.py  rate_limiter.py  schemas.py
src/aegis/api/routes/: actions.py  agents.py  auth.py  copilot.py  execution.py  filesystem.py  network.py  payments.py  policies.py  subscriptions.py  users.py
src/aegis/persistence/: __init__.py  database.py  interfaces.py  migration.py  models.py  ndjson_repos.py  repositories.py
tests/: test_ai.py  test_api.py  test_audit.py  test_auth.py  test_cli.py  test_engine.py  test_entitlement.py  test_execution.py  test_fs.py  test_gateway.py  test_mfa.py  test_models.py  test_network.py  test_payment.py  test_persistence.py  test_policy.py  test_rbac.py  test_registry.py
