[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "A security gateway for AI and software agents"
requires-python = ">=3.10"
dependencies = ["bcrypt>=4.0", "pyyaml>=6.0", "fastapi>=0.110", "uvicorn[standard]>=0.29", "pyotp>=2.9", "cryptography>=41.0"]
license = {text = "MIT"}
authors = [
    {name = "Aegis Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rishabhks651-byte/Aegis"
Documentation = "https://github.com/rishabhks651-byte/Aegis#readme"
Source = "https://github.com/rishabhks651-byte/Aegis"
Issues = "https://github.com/rishabhks651-byte/Aegis/issues"

[project.scripts]
aegis = "aegis.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "mypy>=1.0", "ruff>=0.1"]
db = ["sqlalchemy>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]
include = ["src/aegis/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
